--- a/webapp/ulucidity/css/Ulucidity-header.css
+++ b/webapp/ulucidity/css/Ulucidity-header.css
@@ -17,7 +17,7 @@
 **   File: Ulucidity-header.css
 **
 ** Author: $author$           
-**   Date: 6/6/2022
+**   Date: 6/6/2022, 9/9/2022
 **********************************************************************
 ** Application=Ulucidity Part=header
 */
@@ -33,7 +33,7 @@
     padding: 0px;
     border: 0px;
     border-style: solid;
-    border-color: white; /* %Header_bd_color% */
+    border-color: white; 
     border-spacing: 0px 0px;
     position: relative;
     float: top;
@@ -53,7 +53,7 @@
      margin: auto;
      border: 0px;
      border-style: solid;
-     border-color: white; /* %Header_bd_color% */
+     border-color: white; 
      border-spacing: 0px 0px;
      text-align: center;
      float: left;
@@ -62,7 +62,7 @@
      margin: auto;
      border: 0px;
      border-style: solid;
-     border-color: white; /* %Header_bd_color% */
+     border-color: white; 
      border-spacing: 0px 0px;
      background-color: transparent;
      cursor: pointer;
@@ -71,7 +71,7 @@
      outline: none;
 }
 .parent-button:hover .parent-dot, .parent-button:focus .parent-dot {
-     background-color: lightgray; /* %Header_hv_color% */
+     background-color: lightgray; 
 }
 .parent-dots {
     width: 100%;
@@ -79,7 +79,7 @@
     margin: auto;
     border: 0px;
     border-style: solid;
-    border-color: white; /* %Header_bd_color% */
+    border-color: white; 
     border-spacing: 4px 20px;
 }
 .parent-dot {
@@ -87,7 +87,7 @@
      height: 8px;
      padding: 0px;
      border-radius: 4px;
-     background-color: gray; /* %Header_fg_color% */
+     background-color: gray; 
 }
 /*
 ** ...
@@ -104,7 +104,7 @@
      margin: auto;
      border: 0px;
      border-style: solid;
-     border-color: white; /* %Header_bd_color% */
+     border-color: white; 
      border-spacing: 0px 0px;
      text-align: center;
      float: right;
@@ -113,7 +113,7 @@
      margin: auto;
      border: 0px;
      border-style: solid;
-     border-color: white; /* %Header_bd_color% */
+     border-color: white; 
      border-spacing: 0px 0px;
      background-color: transparent;
      cursor: pointer;
@@ -122,7 +122,7 @@
      outline: none;
 }
 .popdown-button:hover .popdown-dot, .popdown-button:focus .popdown-dot {
-     background-color: lightgray; /* %Header_hv_color% */
+     background-color: lightgray; 
 }
 .popdown-dots {
     width: 100%;
@@ -130,7 +130,7 @@
     margin: auto;
     border: 0px;
     border-style: solid;
-    border-color: white; /* %Header_bd_color% */
+    border-color: white; 
     border-spacing: 4px 4px;
 }
 .popdown-dot {
@@ -138,7 +138,7 @@
      height: 7px;
      padding: 0px;
      border-radius: 4px;
-     background-color: gray; /* %Header_fg_color% */
+     background-color: gray; 
 }
 /*
 ** ...
@@ -155,7 +155,7 @@
      margin: auto;
      border: 0px;
      border-style: solid;
-     border-color: white; /* %Header_bd_color% */
+     border-color: white; 
      border-spacing: 0px 0px;
      text-align: center;
      float: right;
@@ -164,7 +164,7 @@
      margin: auto;
      border: 0px;
      border-style: solid;
-     border-color: white; /* %Header_bd_color% */
+     border-color: white; 
      border-spacing: 0px 0px;
      background-color: transparent;
      cursor: pointer;
@@ -173,7 +173,7 @@
      outline: none;
 }
 .dropdown-button:hover .dropdown-bar, .dropdown-button:focus .dropdown-bar {
-     background-color: lightgray; /* %Header_hv_color% */
+     background-color: lightgray; 
 }
 .dropdown-bars {
     width: 100%;
@@ -181,7 +181,7 @@
     margin: auto;
     border: 0px;
     border-style: solid;
-    border-color: white; /* %Header_bd_color% */
+    border-color: white; 
     border-spacing: 4px 4px;
 }
 .dropdown-bar {
@@ -189,16 +189,16 @@
      height: 6px;
      padding: 0px;
      border-radius: 3px;
-     background-color: gray; /* %Header_fg_color% */
+     background-color: gray; 
 }
 .dropdown-content {
      padding: 0px;
      border-spacing: 0px 0px;
      border-style: solid;
-     border-color: gray; /* %Form_bd_color% */
+     border-color: gray; 
      border-width: 1px 3px 3px 1px;
      border-radius: 5px 5px 5px 5px;
-     background-color: lightgray; /* %Form_bg_color% */
+     background-color: lightgray; 
      position: absolute;
      min-width: 160px;
      right: 0;
@@ -206,7 +206,7 @@
      display: none;
  }
 .dropdown-content a {
-     color: black; /* %Form_fg_color% */
+     color: black; 
      padding: 12px 16px;
      border-spacing: 0px 0px;
      text-decoration: none;
@@ -214,7 +214,7 @@
      display: block;
 }
 .dropdown-content a:hover {
-     color: black; /* %Form_hv_color% */
+     color: black; 
      text-decoration: underline;
 }
 /*
